<resources>
    <string name="app_name">Assignment2</string>
    <string name="manager">MANAGER</string>
    <string name="total_amount">Total: 0</string>
    <string name="quantity">Quantity</string>
    <string name="buy">BUY</string>
    <string name="product_name">Product Name</string>
    <string name="history">HISTORY</string>
    <string name="restock">RESTOCK</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>